src/objects/CventEvents__RespondentTemp__c.object
<CustomObject>
    <fields>
        <fullName>SureSmileusertype__c</fullName>
        <label>SureSmile user type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Ortho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidContact__c</fullName>
        <label>Valid Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YourAGDPACEID__c</fullName>
        <label>Your AGD PACE ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Respondent Temp Record</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_ProcessStatus__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CventEvents__pkg_DataTransferStatus__c</columns>
        <columns>CventEvents__pkg_DataTransferMessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusFailed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Status Failed</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusPending</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Status Pending</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusProcessed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>Status Processed</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Respondent Temp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respondent Temp Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>